--- a/manifests/ingress-resources.yaml
+++ b/manifests/ingress-resources.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: nginx.example.com
+  - host: flappybird.example.com
     http:
       paths:
       - path: /
@@ -17,7 +17,7 @@ spec:
             name: flappybird-service
             port: 
               number: 80
-  - host: snake.nginx.example.com
+  - host: snake.example.com
     http:
       paths:
       - path: /
